# blackjack

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: core.rs  engine.rs  error.rs  main.rs  net.rs  persist.rs  tui.rs  types.rs
src/core/: card.rs  hand.rs  payout.rs  rules.rs  shoe.rs
src/types/: action.rs  phase.rs  player.rs
