[package]
name = "blackjack"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bevy_ecs = { version = "0.17", features = ["serialize"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rustls = "0.23"
tokio-rustls = "0.26"
hmac = "0.12"
sha3 = "0.10"
argon2 = "0.4"
clap = { version = "4", features = ["derive"], optional = true }

[features]
default = []
cli = ["clap"]

