[package]
name = "blackjack"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
argon2 = "0.4"
bevy_ecs = { version = "0.17", features = ["serialize"] }
clap = { version = "4", features = ["derive"], optional = true }
env_logger = "0.11"
hmac = "0.12"
log = "0.4"
rand = "0.9"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
sha3 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"

[features]
default = []
cli = ["clap"]

