[package]
name = "blackjack"
version = "0.1.0"
edition = "2024"

[dependencies]
# ECS & Game Logic
bevy_ecs = "0.17"
rand = "0.9"

# Async Runtime (minimal features)
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "2.0"
toml = "0.9"

# Networking
uuid = { version = "1", features = ["v4", "v7", "serde", "fast-rng"] }

# TUI
ratatui = "0.29"
# crossterm re-exported by ratatui - don't add separately

# Logging (use tracing, not log)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "2"
anyhow = "1"

# Utilities
dirs = "6"

# Security (always included for WAN-ready)
rustls = "0.23"
tokio-rustls = "0.26"
argon2 = "0.5"
hmac = "0.12"
sha3 = "0.10"

[features]
default = ["tls"]
tls = []  # Keep TLS always compiled in

[profile.dev]
opt-level = 1  # Faster dev builds, still debuggable

[profile.release]
lto = "thin"
codegen-units = 1